Added home component

--- a/src/components/style/app.css
+++ b/src/components/style/app.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
     text-transform: uppercase;
     font-family: arial;
-    border-bottom: 2px solid #E4561E;
+    border-bottom: 2px solid #EEA61B;
 }
 
 #diamond-one, #diamond-three {
