--- a/src/components/style/footer.css
+++ b/src/components/style/footer.css
@@ -1,14 +1,31 @@
 footer {
+    background-color: #881E1D;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 100px;
+}
+
+footer h3 {
+    font-family: 'Voltaire', sans-serif;
+    text-transform: uppercase;
 }
 
 #business-info-container {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     padding: 70px;
 }
 
+#footer-logo {
+    width: 250px;
+}
 #copyright {
     text-align: center;
+    font-size: 10px;
+    color: white;
 }
 
+#footer-header {
+    font-family: 'Voltaire', sans-serif;
+}
